fix(datepicker,select): arrow button consistency (#9807)
* Fixes the datepicker's arrow being off a few pixels inside `md-input-container`, as well as being too close to the bottom when not in a `md-input-container`.
* Fixes the select's arrow icon being too dark, because it inherits from the closest `color` rule.

Relates to #9798.

--- a/src/components/select/select-theme.scss
+++ b/src/components/select/select-theme.scss
@@ -94,6 +94,14 @@ md-select.md-THEME_NAME-theme {
       }
     }
   }
+
+  .md-select-icon {
+    color: '{{foreground-3}}';
+
+    &:hover {
+      color: '{{foreground-2}}';
+    }
+  }
 }
 
 md-select-menu.md-THEME_NAME-theme {
